# telecom-churn-prediction

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/telecom_churn_prediction/: __init__.py  models.py
tests/: test_models.py
