[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-churn-prediction"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["scikit-learn>=1.0.0", "pandas>=2.0.0", "numpy>=1.20.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
